Add Project Song

--- a/login.html
+++ b/login.html
@@ -79,10 +79,9 @@
                 <h1>X-SONG</h1>
             </div>
             <div class="social-icons">
-                <a class="text-light" href="https://web.facebook.com/phun.potthea.1222"><i
-                        class="fa-brands fa-facebook"></i></a>
+                <a class="text-light" href="https://web.facebook.com/phun.potthea.1222"><i class="fa-brands fa-facebook"></i></a>
                 <a class="text-light" href="https://www.tiktok.com/@p_potthea"><i class="fa-brands fa-tiktok"></i></a>
-                <a class="text-light" href=""><i class="fa-brands fa-linkedin"></i></a>
+                <a class="text-light" href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a class="text-light" href="https://www.instagram.com/pottheaphon/"><i
                         class="fa-brands fa-instagram"></i></a>
                 <a class="text-light" href="https://github.com/MrPotthea"><i class="fa-brands fa-github"></i></a>
@@ -95,7 +94,7 @@
                 <button type="submit">Send</button>
             </form>
         </div>
-    </footer>
+    </footer>  
     <script src="Js/list_song.js"></script>
 </body>
 <!-- JavaScript for Menu Toggle -->
