Update File Home

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="Style/homepage.css">
+    <link rel="stylesheet" href="Style/index.css">
     <title>XsongplayMusi_Homec</title>
 </head>
 
@@ -28,7 +28,7 @@
         </div>
         <!-- Navigation Menu -->
         <nav class="menu-items">
-            <a href="http://127.0.0.1:5500/homepage.html">Home</a>
+            <a href="http://127.0.0.1:5500/index.html">Home</a>
             <a href="http://127.0.0.1:5500/playmusic.html">Music</a>
             <a href="#">News</a>
             <a href="#">About Us</a>
