--- a/playmusic.html
+++ b/playmusic.html
@@ -22,7 +22,7 @@
         </div>
         <!-- Navigation Menu -->
         <nav class="menu-items">
-            <a href="http://127.0.0.1:5500/homepage.html">Home</a>
+            <a href="http://127.0.0.1:5500/index.html">Home</a>
             <a href="http://127.0.0.1:5500/playmusic.html">Music</a>
             <a href="#">News</a>
             <a href="#">About Us</a>
@@ -128,7 +128,7 @@
             </form>
         </div>
     </footer>
-    <script src="Js/list_song.js"></script>
+    <script src="Js/index.js"></script>
 </body>
 <!-- JavaScript for Menu Toggle -->
 <script>
