--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -15,14 +15,14 @@
 </head>
 
 <body>
-    <!-- Header -->
-    <header class="header">
+     <!-- Header -->
+     <header class="header">
         <div class="logo">
             <h1>X-SONG</h1>
         </div>
         <!-- Navigation Menu -->
         <nav class="menu-items">
-            <a href="http://127.0.0.1:5500/homepage.html">Home</a>
+            <a href="http://127.0.0.1:5500/index.html">Home</a>
             <a href="http://127.0.0.1:5500/playmusic.html">Music</a>
             <a href="#">News</a>
             <a href="#">About Us</a>
