--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
         </div>
         <!-- Navigation Menu -->
         <nav class="menu-items">
-            <a href="http://127.0.0.1:5500/homepage.html">Home</a>
+            <a href="http://127.0.0.1:5500/index.html">Home</a>
             <a href="http://127.0.0.1:5500/playmusic.html">Music</a>
             <a href="#">News</a>
             <a href="#">About Us</a>
