--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -22,16 +22,16 @@
         </div>
         <!-- Navigation Menu -->
         <nav class="menu-items">
-            <a href="http://127.0.0.1:5500/index.html">Home</a>
-            <a href="http://127.0.0.1:5500/playmusic.html">Music</a>
+            <a href="index.html">Home</a>
+            <a href="playmusic.html">Music</a>
             <a href="#">News</a>
             <a href="#">About Us</a>
-            <a class="user" href="http://127.0.0.1:5500/login.html">Login</a>
+            <a class="user" href="login.html">Login</a>
         </nav>
         <!-- User Actions -->
         <div class="user-actions">
             <i class="fa-solid fa-user"></i>
-            <a href="http://127.0.0.1:5500/login.html">Login</a>
+            <a href="login.html">Login</a>
         </div>
         <!-- Menu Icon -->
         <div class="menu-icon">
@@ -46,8 +46,8 @@
                 <input type="text" placeholder="Phone or Email" required>
                 <button class="btn btn-warning text-white rounded rounded-5 mt-3">
                     Verify</button>
-                <p class="d-flex justify-content-between mt-3 text-secondary"><a class="text-warning" href="http://127.0.0.1:5500/login.html">Login</a>
-                    <a class="ms-2 text-warning" href="http://127.0.0.1:5500/signup.HTML">Create account</a>
+                <p class="d-flex justify-content-between mt-3 text-secondary"><a class="text-warning" href="login.html">Login</a>
+                    <a class="ms-2 text-warning" href="signup.HTML">Create account</a>
                 </p>
             </form>
         </div>
