--- a/login.html
+++ b/login.html
@@ -22,16 +22,16 @@
         </div>
         <!-- Navigation Menu -->
         <nav class="menu-items">
-            <a href="http://127.0.0.1:5500/index.html">Home</a>
-            <a href="http://127.0.0.1:5500/playmusic.html">Music</a>
+            <a href="index.html">Home</a>
+            <a href="playmusic.html">Music</a>
             <a href="#">News</a>
             <a href="#">About Us</a>
-            <a class="user" href="http://127.0.0.1:5500/login.html">Login</a>
+            <a class="user" href="login.html">Login</a>
         </nav>
         <!-- User Actions -->
         <div class="user-actions">
             <i class="fa-solid fa-user"></i>
-            <a href="http://127.0.0.1:5500/login.html">Login</a>
+            <a href="login.html">Login</a>
         </div>
         <!-- Menu Icon -->
         <div class="menu-icon">
@@ -45,7 +45,7 @@
             <form action="" class="d-flex flex-column">
                 <input type="text" placeholder="Phone or Email" required>
                 <input type="password" placeholder="Password" required>
-                <a class="d-flex justify-content-end" href="http://127.0.0.1:5500/forgetpassword.HTML">Forgot
+                <a class="d-flex justify-content-end" href="forgetpassword.HTML">Forgot
                     Password?</a>
                 <button class="btn btn-warning text-white rounded rounded-5 mt-3">Login</button>
                 <div class="divider">
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <p class="text-center mt-3 text-secondary">Don't have an account?
-                    <a class="ms-2 text-warning" href="http://127.0.0.1:5500/signup.HTML">Create account</a>
+                    <a class="ms-2 text-warning" href="signup.HTML">Create account</a>
                 </p>
             </form>
         </div>
