--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         </div>
         <!-- Navigation Menu -->
         <nav class="menu-items">
-            <a href="http://127.0.0.1:5500/index.html">Home</a>
-            <a href="http://127.0.0.1:5500/playmusic.html">Music</a>
+            <a href="index.html">Home</a>
+            <a href="playmusic.html">Music</a>
             <a href="#">News</a>
             <a href="#">About Us</a>
-            <a class="user" href="http://127.0.0.1:5500/login.html">Login</a>
+            <a class="user" href="login.html">Login</a>
         </nav>
         <!-- User Actions -->
         <div class="user-actions">
             <i class="fa-solid fa-user"></i>
-            <a href="http://127.0.0.1:5500/login.html">Login</a>
+            <a href="login.html">Login</a>
         </div>
         <!-- Menu Icon -->
         <div class="menu-icon">
