--- a/signup.html
+++ b/signup.html
@@ -22,16 +22,16 @@
         </div>
         <!-- Navigation Menu -->
         <nav class="menu-items">
-            <a href="http://127.0.0.1:5500/index.html">Home</a>
-            <a href="http://127.0.0.1:5500/playmusic.html">Music</a>
+            <a href="index.html">Home</a>
+            <a href="playmusic.html">Music</a>
             <a href="#">News</a>
             <a href="#">About Us</a>
-            <a class="user" href="http://127.0.0.1:5500/login.html">Login</a>
+            <a class="user" href="login.html">Login</a>
         </nav>
         <!-- User Actions -->
         <div class="user-actions">
             <i class="fa-solid fa-user"></i>
-            <a href="http://127.0.0.1:5500/login.html">Login</a>
+            <a href="login.html">Login</a>
         </div>
         <!-- Menu Icon -->
         <div class="menu-icon">
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <p class="text-center mt-3 text-secondary">Already have an account?
-                    <a class="ms-2 text-warning" href="http://127.0.0.1:5500/login.HTML">Login</a>
+                    <a class="ms-2 text-warning" href="login.HTML">Login</a>
                 </p>
             </form>
         </div>
