--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="Style/index.css">
-    <title>XsongplayMusi_Homec</title>
+    <link rel="stylesheet" href="Style/playmusic.css">
+    <title>XsongplayMusic_ListMusic</title>
 </head>
 
 <body>
@@ -44,246 +38,66 @@
             <i class="fas fa-bars"></i>
         </div>
     </header>
-    <div class="container-fluid p-0 ">
-        <div class="container">
-            <div class="banner_music">
-                <div id="carouselExample" class="carousel slide">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <div class="music_banner">
-                                <a href=""><img src="img/image.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="music_banner">
-                                <a href=""><img src="img/vanda1.jpg" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="music_banner">
-                                <a href=""><img src="img/vanda2.jpg" alt=""></a>
-                            </div>
-                        </div>
+    <div class="container">
+        <div class="playmusic pt-5 pb-5">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div class="img_song">
+                        <img id="songImage" src="img/unnamed (14).jpg" alt="Song Thumbnail">
                     </div>
-                    <button class="carousel-control-prev z-1" type="button" data-bs-target="#carouselExample"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next z-1" type="button" data-bs-target="#carouselExample"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="active_music mt-3">
+                        <h5 id="songTitle"></h5>
+                        <p id="songArtist"></p>
+                        <br>
+                        <div class="time">
+                            <span id="currentTime"></span>
+                            <span id="duration"></span>
+                        </div>
+                        <div class="progress-bar mt-2" id="progressBar">
+                            <div class="progress"></div>
+                        </div>
+                        <br>
+                        <div class="controls">
+                            <button id="prev" aria-label="Previous Song">⏮</button>
+                            <button id="playPause" aria-label="Play/Pause">▶</button>
+                            <button id="next" aria-label="Next Song">⏭</button>
+                        </div>
+                        <audio id="audioPlayer" preload="auto"></audio>
+                    </div>
+                </div>
+            </div>
+        </div>        
+    </div>
+    <div class="container-fluid bg-dark py-5">
+        <div class="container">
+            <div class="search_music">
+                <div class="list_category">
+                    <a href="">All Music</a>
+                    <a href="">Related</a>
+                    <a href="">For You</a>
+                    <a href="">New</a>
+                </div>
+                <div class="search">
+                    <input id="searchInput" type="text" placeholder="Search Music">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
+            <div id="musicList" class="list-music d-flex flex-column align-items-center mt-5">
+                <div class="container p-0">
+                </div>
+                <div class="change_page mt-5 d-flex gap-5">
+                    <i class="fa-solid fa-chevron-left"></i>
+                    <span>1</span>
+                    <span>2</span>
+                    <i class="fa-solid fa-chevron-right"></i>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid mt-5">
-        <div class="container">
-            <h5 class="fw-bold" style=" font-family: Arial, sans-serif;">Popular Music</h5>
-            <div class="popular">
-                <div class="music_scroll" id="musicScroll">
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/van1.jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (1).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (2).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (3).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (4).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (5).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (6).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (7).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (8).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (9).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (10).jpg" alt="">
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="mt-5 list_category">
-                <a href="">All music</a>
-                <a href="">Hip Hop</a>
-                <a href="">Rap</a>
-                <a href="">Rock</a>
-                <a href="">Pop</a>
-                <a href="">Love</a>
-                <a href="">Khmer New Year</a>
-                <a href="">Remix</a>
-                <a href="">Classic</a>
-                <a href="">Tradition</a>
-            </div>
-            <h5 class="fw-bold mt-5" style=" font-family: Arial, sans-serif;">New Music</h5>
-            <div class="popular">
-                <div class="music_scroll" id="musicScroll">
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (11).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (12).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (13).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (14).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (15).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (16).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (17).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (18).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (19).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (20).jpg" alt="">
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <img src="img/unnamed (21).jpg" alt="">
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <h5 class="fw-bold mt-5" style=" font-family: Arial, sans-serif;">Popular​ Celebrities</h5>
-            <div class="popular">
-                <div class="music_scroll" id="musicScroll">
-                    <div class="card_music d-flex justify-content-center align-items-center">
-                        <a href="">
-                            <div class="celebrities">
-                                <img src="img/rovanda.jpg" alt="">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <div class="celebrities">
-                                <img src="img/ponleu.jpg" alt="">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <div class="celebrities">
-                                <img src="img/uhai.jpg" alt="">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <div class="celebrities">
-                                <img src="img/ab6761610000e5eb1ca0d5e815b0b674465b28bb.jpg" alt="">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <div class="celebrities">
-                                <img src="img/159.jpg" alt="">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <div class="celebrities">
-                                <img src="img/sana.png" alt="">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <div class="celebrities">
-                                <img src="img/nith.jpg" alt="">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <div class="celebrities">
-                                <img src="img/k1j.jpg" alt="">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="card_music">
-                        <a href="">
-                            <div class="celebrities">
-                                <img src="img/km.jpg" alt="">
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <footer class="footer mt-5">
+
+    <footer class="footer">
         <div class="footer-section">
             <div class="contact-info">
                 <p><strong>Phone</strong></p>
@@ -298,12 +112,12 @@
             </div>
             <div class="social-icons">
                 <a class="text-light" href="https://web.facebook.com/phun.potthea.1222"><i
-                    class="fa-brands fa-facebook"></i></a>
-            <a class="text-light" href="https://www.tiktok.com/@p_potthea"><i class="fa-brands fa-tiktok"></i></a>
-            <a class="text-light" href=""><i class="fa-brands fa-linkedin"></i></a>
-            <a class="text-light" href="https://www.instagram.com/pottheaphon/"><i
-                    class="fa-brands fa-instagram"></i></a>
-            <a class="text-light" href="https://github.com/MrPotthea"><i class="fa-brands fa-github"></i></a>
+                        class="fa-brands fa-facebook"></i></a>
+                <a class="text-light" href="https://www.tiktok.com/@p_potthea"><i class="fa-brands fa-tiktok"></i></a>
+                <a class="text-light" href=""><i class="fa-brands fa-linkedin"></i></a>
+                <a class="text-light" href="https://www.instagram.com/pottheaphon/"><i
+                        class="fa-brands fa-instagram"></i></a>
+                <a class="text-light" href="https://github.com/MrPotthea"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
         <div class="footer-section">
@@ -314,6 +128,7 @@
             </form>
         </div>
     </footer>
+    <script src="Js/index.js"></script>
 </body>
 <!-- JavaScript for Menu Toggle -->
 <script>
